See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.47.00

              Add pamsistoaglyph.  Thanks Scott Pakin.

              Add /usr/share/netpbm/rgb.txt to search path for color
              dictionary.

              Remove nstring.h from exported interfaces.

              giftopnm: improve efficiency.

              pnmremap: fix loss of dithering when the map (and thus the
              output) has lower maxval than the input.  (Old code scales down
              to the new maxval before dithering).

              giftopnm: fix for unlikely case of a block smaller than a code.

              ppmpat: fix crash in -squig.

              ppmpat: fix crash when width or height is zero.

              ppmpat: fix wrong output with -poles.

              ilbmtoppm: fix some bug in interpreting ILBM input.
              (due to wrong pm_uintFromBigend16()).  From 10.46.

              ximtoppm: fix crash in command line processing.

              ppmrainbow: exit with proper exit status upon failure.
              
              ppmfade: eliminate reference to undeclared subroutine.

              ppmquantall: don't use 'set' to set Bourne shell variable.

              pnmtile: fix reference to arbitrary storage in option
              processing.  Introduced in 10.42.

              pamstereogram: fix tuple type in output file (and crash
              with -verbose) with -patfile .

              pamstereogram: fix uninitialized bytes per sample value.

              pbmtomacp: fix buffer overflow.

              libnetpbm (ppmd): fix: don't ignore failure to read font file.

              Fix: remove inclusion of pm_c_util.h from sshopt.h, which is
              an exported interface header file, whereas pm_c_util.h is not.

              Lots of changes to integer code, bit access, word access, etc.
              None functional.  Some speedup.
