@@ -15,6 +15,12 @@ not yet  BJH  Release 10.47.00
 
               giftopnm: improve efficiency.
 
+              pnmremap: fix: -firstisdefault uses an arbitrary color from the
+              map as default.
+
+              pnmremap: fix -missing:  where map file (ergo output) is not
+              depth 3, uses an arbitrary color.
+
               pnmremap: fix loss of dithering when the map (and thus the
               output) has lower maxval than the input.  (Old code scales down
               to the new maxval before dithering).
